--- a/src/index.html
+++ b/src/index.html
@@ -727,12 +727,10 @@
     }
   </style>
   <link type="text/css" rel="stylesheet" href="/style.css" />
-  </style>
 </head>
 
 <body class="home blog logged-in admin-bar no-customize-support group-blog getnoticed-main-plain getnoticed-mainnav-side getnoticed-block-searchwidget">
   <div class="sitewrap">
-
     <nav id="headernav" role="navigation" class="site-navigation main-navigation">
       <div class="innerwrap">
         <header id="masthead" class="site-header" role="banner">
@@ -1417,7 +1415,9 @@
             <aside id="getnoticed_aboutme-2" class="widget widget_getnoticed_aboutme">
               <h3 class="widget-title">Our Journey</h3>
               <div class="textwidget" style="overflow: hidden;">
-                <p><img src="/images/wallenbecks.png" style="width:150px;float:left;margin:0.3em 1em 0 0;" class="about-me-image" scale="0">Our 23 years of marriage has taken us down some
+                <p>
+                  <img src="/images/wallenbecks.png" style="width:150px;float:left;margin:0.3em 1em 0 0;" class="about-me-image" scale="0">
+                  Our 23 years of marriage has taken us down some
                   pretty interesting roads. Some twisting mountain inclines with near catastrophe. Some lake-shore drives with anticipation around each corner. Some long drawn out mid-west miles you just have to wait out. Some country side fall color
                   tours offering peace and calm. It is our goal and hope that you find our unscripted experiences give helpful insights into raising your daughters and growing your relationship together ... <a href="/our-story">read our story</a>.
                 </p>
