Add preview header links

--- a/src/what-if.html
+++ b/src/what-if.html
@@ -730,6 +730,14 @@
 </head>
 
 <body class="page page-id-421 page-template-default logged-in admin-bar no-customize-support group-blog getnoticed-main-plain getnoticed-mainnav-side getnoticed-block-searchwidget">
+  <div class="preview-header">
+    <h2>Preview links</h2>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="article.html">Sample Article</a></li>
+      <li><a href="what-if.html">What If Challenge</a></li>
+    </ul>
+  </div>
   <div class="sitewrap">
 
     <nav id="headernav" role="navigation" class="site-navigation main-navigation">
